main.less
@import "mediawiki.mixins";

/* Element colours */
@bold-bkg: #f3f3f3;
@bold-border: #e0e0e0;
@soft-bkg: #f9f9f9;
@soft-border: #eee;

body {
	font-family: sans-serif;
	font-size: 1em;
	line-height: 1.3em;
	padding: 0;
	margin: 0;
	color: #111;
	background: @bold-bkg;
}
a {
	text-decoration: none;
	color: #36a;
}
a:visited {
	color: #35a;
}
#p-personal a.new,
.new a,
a.new {
	color: #a56
}
#p-personal a.new:visited,
.new a:visited,
a.new:visited {
	color: #857
}
.center {
	margin: auto;
	text-align: center;
}
.visualClear {
	clear: both;
}

/* Set up appearance */

#header-navigation-container,
#content-container,
#footer-tools-container {
	background: #fff;
}
#footer-bottom-container {
	border-top: solid 1px @bold-border;
}
#header-navigation-container {
	border-bottom: solid 1px @soft-border;
}
#header-top-container {
	border-bottom: solid 1px @bold-border;
}

#header-top,
#header-navigation,
#content,
#footer-bottom {
	width: 950px;
	margin: auto;
	padding: 1.5em;
	word-wrap: break-word;
}

/*
 *
 * HEADER STUFF
 *
 */

#header-container {
	font-size: 95%;

	#header-top {
		padding: 1em 1.5em;
	}

	/* Banner stuff */
	#sitetitle {
		padding-top: .25em;

		a {
			font-size: 210%;
			font-weight: bold;
			line-height: 140%;
			color: #999;
			/* @noflip */
			text-shadow:  0 -1px 1px #333, 0 2px 1px #fff;

			&:hover {
				text-decoration: none;
			}
		}
	}
	#sitesubtitle {
		font-style: italic;
		font-size: 85%;
		line-height: 1.2em;
	}

	/* Search stuff */
	#p-search {
		float: right;
		clear: both;
		margin-top: .5em;
		margin-top: -2px !ie;
		margin-bottom: -8px !ie;

		#searchInput {
			width: 23em;
			border: solid 1px #ccc;
		}
		#searchGoButton {
			border: solid 1px #bbb;
			height: 30px !ie;
			margin: 8px 0 !ie;
		}
		input {
			font-size: 85%;
		}
	}

	/* Login stuff */
	#p-personal {
		float: right;
		color: #777;
		font-size: 85%;

		.no-dropdown ul {
			margin: 0;
			padding: 0 0 .3em 0;
			list-style: none;
		}
		.dropdown {
			display: none;
		}
		#p-welcome {
			background-repeat: no-repeat;
			background-position: 100% 40%;
			.background-image-svg('images/arrow-down.svg', 'images/arrow-down.png');
			padding: 0 1.75em .3em 0;
		}
	}

	/*
	* Navigation menus
	*
	* Some stuff shared with personal menu
	*/
	#header-navigation {
		padding: 0 1.5em;
		font-size: 90%;
		height: 20px !ie;
		padding-top: .5em !ie;

		h3 {
			display: inline-block;
			display: inline !ie;
			padding: 0 1.75em 0 0;
			margin: .6em 1.5em .45em 0;
			font-weight: normal;
			font-size: 90%;
			background-repeat: no-repeat;
			background-position: 100% 60%;
			.background-image-svg('images/arrow-down.svg', 'images/arrow-down.png');
			text-shadow: none;
		}
		.pBody {
			display: none;
		}
		.portlet {
			display: inline-block;
			display: inline !ie;
		}
		ul {
			padding: 0;
			margin: 0;
			list-style: none;
		}
		li {
			margin: 0 1.25em 0 0;
			font-size: 90%;
		}
	}
	/* Reverse right menus */
	#header-tools h3 {
		margin: .6em 0 .45em 1.5em;
	}
	#header-tools {
		float: right;
	}

	/* Dropdown stuff */
	#p-welcome:hover,
	#header-navigation h3:hover {
		cursor: pointer;
	}

	#p-personal,
	#header-navigation-container .portlet {
		position: relative;
	}
	#p-personal:hover .dropdown,
	#header-navigation-container .portlet:hover .pBody {
		display: block;
		position: absolute;
		background: #fff;
		top: 100%;
		right: 0;
		padding: .75em 2em;
		border: solid 1px @soft-border;
		box-shadow: 0 2px 4px rgba(0,0,0,.05);
		width: 8em;
		text-align: left;
		z-index: 5;
		line-height: 1.1em;
	}
	#p-personal:hover .dropdown {
		top: 1.75em;
	}
	#navigation .portlet:hover .pBody {
		left: 0;
	}
	.dropdown ul,
	#header-navigation-container .portlet ul {
		margin: 0;
		padding: 0;
		list-style: none;
	}
	.dropdown li,
	#header-navigation-container .portlet li {
		margin: .75em 0;
	}
}

/*
 *
 * FOOTER STUFF
 *
 */
#footer-container {
	font-size: 80%;

	#footer-bottom {
		font-size: 85%;
		color: #777;
		padding-top: .5em;
	}
	.footer-icons {
		float: right;
		margin-left: 1em;
	}
	#f-list {
		margin: 1em 0 0;
		padding: 0;
		list-style: none;
		line-height: 1.2em;

		li {
			display: inline;
			margin: 0 1em 0 0;
		}
	}
}


/*
 *
 * PREFERENCES AND FIELDSET STUFF
 *
 */
#preftoc {
	margin: 0 0 1em;
	padding: 0;
	list-style: none;
	clear: both;

	li {
		display: inline;
		margin-right: 1em;

		&.selected {
			border-bottom: solid 1px @soft-border;
		}
		&.selected a {
			color: #000;
		}
	}
}
#preferences {
	margin: 0;
	clear: both;
	min-height: 400px;

	.prefsection {
		border: none;
		padding: 0;
		margin: 0;
	}
	.mainLegend {
		display: none;
	}
	.preferences-login {
		clear: both;
		margin-bottom: 1.5em;
	}
	.mw-email-not-authenticated .mw-input, .mw-email-none .mw-input {
		display: block;
	}
}

/*
 *
 * FORM STUFF
 *
 */
#searchInput,
input[type="text"],
input[type="checkbox"],
input[type="radio"],
input.mw-summary,
.mw-input input,
textarea {
	padding: .45em;
	box-shadow: 0 1px 4px -1px #ccc inset;
	border: solid 1px @bold-border;
	margin-bottom: .5em;
}
input[type="radio"] {
	border-radius: 7px;
}
input[type="submit"],
button {
	padding: .45em 1em;
	border: solid 1px #ccc;
	border-radius: 3px;
	box-shadow: none;
	.vertical-gradient ( #fcfcfc, #ededed, 0, 100% );

	&:active {
		.vertical-gradient ( #fff, #f6f6f6, 0, 100% );
	}
}
textarea {
	width: 100%;
	resize: vertical;
	box-sizing: border-box;
	line-height: 1.3em;
}
div.editOptions {
	background: @soft-bkg;
	border-color: @soft-border;
}
td.mw-input,
td.mw-label {
	vertical-align: middle;
}

fieldset {
	border: 1px @bold-border;
	border-style: solid none none;
	line-height: 1.3em;
	margin: 1em 0;
	padding: 1.5em 0 0 0;

	legend {
		padding: 0 1em;
		font-variant: small-caps;
		text-shadow: 0 0 1px #999;
		margin-left: 1em;
	}
}
label {
	padding-left: 1em;
}
.mw-label {
	padding-right: 1em;
}
.mw-submit {
	padding-top: 2em;
}
.htmlform-tip {
	font-size: 85%;
	color: #666;
	line-height: 1.2em;
	padding: 1em 0;
}


/*
 *
 * CACTIONS
 *
 */
#p-cactions {
	float: right;

	ul {
		margin: 1em 0 0 0;
		padding: 0;
		list-style: none;
		text-shadow: none;
		font-variant: normal;
		font-size: 47%;
		line-height: 1.1em;

		li {
			display: inline-block;
			display: inline !ie;
			margin-left: .75em;

			&[id^="ca-nstab-"]:after {
				content: ':';
			}
			/* Duplicate with tools */
			&#ca-history {
				display: none;
			}
		}
		.ns-special li[id^="ca-nstab-"]:after {
			content: '';
		}
	}
}


/*
 *
 * CONTENT STUFF
 *
 */
#content-container {
	font-size: 90%;
}
#firstHeading {
	font-size: 195%;
	margin-top: 0;
	padding-top: 0;
	border-bottom: solid 1px @soft-border;
}

#siteSub {
	display: none;
}
#bodyContent {
	font-size: 93%;
}

h1, h2, h3, h4, h5, h6 {
	line-height: 1.1em;
	font-variant: small-caps;
	font-weight: normal;
	color: #666;
	margin-bottom: .25em;
	text-shadow: 0 -1px 0 #ddd, 0 0 1px #999;
	margin: 1.5em 0 .5em;
}
h1 .mw-editsection,
h2 .mw-editsection,
h3, h4, h5, h6 {
	font-variant: normal;
}
h1 {
	font-size: 190%;
}
h2 {
	font-size: 160%;
}
h3 {
	font-size: 125%;
}
h4 {
	font-size: 120%;
}
h5 {
	font-size: 110%;
}
h6 {
	font-size: 100%;
}
.mw-editsection-bracket {
	display: none;
}
.mw-editsection {
	text-shadow: none;
}
hr {
	border: 1px @soft-border;
	border-style: solid none none none;
}
pre {
	overflow: auto;
	white-space: pre-wrap;
}

/* Categories */
#catlinks {
	font-size: 85%;
	border-top: solid 1px @soft-border;
	margin: 1.75em 0 -1.6em;
	padding: .35em 0 0;
	color: #aaa;

	li {
		border: none;
		padding-right: .75em;
	}
}

#contentSub {
	font-size: 85%;
	margin: -1.45em 0 1.75em;
	border-bottom: solid 1px @soft-border;
	padding: 0 0 .1em;
	color: #aaa;
}

/* Tables of contents */
ul#filetoc {
	background-color: @soft-bkg;
	border: 1px solid @soft-border;
	color: #777;
}
#toc, .toc, .mw-warning {
	background-color: @soft-bkg;
	border: 1px solid @soft-border;
	padding: 1.2em 1.4em;
	color: #777;
	display: inline-block;
	display: inline !ie;
}
.toc ul {
	list-style: none;
}
.toc h2 {
	font-size: 120%;
	margin-top: .5em;
	margin-right: 1em;
	display: inline-block;
	display: inline !ie;
}

